--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -1,19 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
-}
-
-body {
-  margin: 0;
-  font-family: Arial, Helvetica, sans-serif;
-
-  .text-scroll {
-    margin-top: 210px;
-    padding: 15px 15px 2500px;
-    font-size: 30px;
-  }
-}
-
 #navbar {
   overflow: hidden;
   background-color: #f3f3f7;
@@ -89,4 +73,88 @@ body {
   }
 }
 
+// .btn.btn-icon.btn-lg,
+// .navbar .navbar-nav > a.btn.btn-icon.btn-lg {
+//   height: 3rem;
+//   min-width: 3rem;
+//   width: 3rem;
+//   border-radius: 50%;
+// }
+
+// .button-container .btn-default {
+//   margin-right: 8px;
+// }
+
+// .page-header .btn {
+//   width: 140px;
+// }
+
+// .btn.btn-icon,
+// .navbar .navbar-nav > a.btn.btn-icon {
+//   height: 2.375rem;
+//   min-width: 2.375rem;
+//   width: 2.375rem;
+//   padding: 0;
+//   font-size: 0.9375rem;
+//   overflow: hidden;
+//   position: relative;
+//   line-height: normal;
+// }
+
+// .btn-lg {
+//   font-size: 1em;
+//   border-radius: 0.25rem;
+//   padding: 15px 48px;
+// }
+
+// .btn-round {
+//   border-width: 1px;
+//   border-radius: 30px !important;
+//   padding: 11px 23px;
+// }
+
+// .btn,
+// .navbar .navbar-nav > a.btn {
+//   border-width: 2px;
+//   font-weight: 400;
+//   font-size: 0.8571em;
+//   line-height: 1.35em;
+//   margin: 5px 1px;
+//   border: none;
+//   border-radius: 0.1875rem;
+//   padding: 11px 22px;
+//   cursor: pointer;
+//   background-color: #40a249;
+//   color: #ffffff;
+// }
+
+// btn-group-lg > .btn,
+// .btn-lg {
+//   padding: 0.5rem 1rem;
+//   font-size: 1.25rem;
+//   line-height: 1.5;
+//   border-radius: 0.3rem;
+// }
+
+// .btn {
+//   display: inline-block;
+//   font-weight: 400;
+//   text-align: center;
+//   white-space: nowrap;
+//   vertical-align: middle;
+//   -webkit-user-select: none;
+//   -moz-user-select: none;
+//   -ms-user-select: none;
+//   user-select: none;
+//   border: 1px solid transparent;
+//   padding: 0.5rem 0.75rem;
+//   font-size: 1rem;
+//   line-height: 1.25;
+//   border-radius: 0.25rem;
+//   transition: all 0.15s ease-in-out;
+// }
+
+// a {
+//   color: #378c3f;
+// }
 /*# sourceMappingURL=main.css.map */
