--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -1,9 +1,9 @@
 #navbar {
   overflow: hidden;
-  background-color: #f3f3f7;
+  background-color: #F3F3F7;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
-  padding: 20px 10px;
+  // padding: 20px 10px;
   -webkit-transition: 0.4s;
   transition: 0.4s;
   position: fixed;
