--- a/css/colorpalette.scss
+++ b/css/colorpalette.scss
@@ -1,9 +1,9 @@
 .cointainer {
   width: 100%;
-  background-color: #f3f3f7;
+  background-color: #FFF;
   display: grid;
   margin: 5px 0.5px;
-  grid-template-rows: repeat(3, 200px);
+  grid-template-rows: repeat(3, 175px);
   grid-template-columns: repeat(5, 20%);
   grid-row-gap: 10px;
 }
@@ -14,10 +14,13 @@
   vertical-align: middle;
   font-size: 15px;
   font-family: sans-serif;
-  line-height: 200px;
+  line-height: 175px;
   color: #fff;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
+}
+
+.itemr {
 
   &--1 {
     background-color: #E44236;
@@ -80,9 +83,72 @@
   }
 }
 
+.itemb {
+
+  &--1 {
+    background-color: #3498DB;
+  }
+
+  &--2 {
+    background-color: #2475B0;
+  }
+
+  &--3 {
+    background-color: #74B9FF;
+  }
+
+  &--4 {
+    background-color: #0A79DF;
+  }
+
+  &--5 {
+    background-color: #4834DF;
+  }
+
+  &--6 {
+    background-color: #30336B;
+  }
+
+  &--7 {
+    background-color: #487EB0;
+  }
+
+  &--8 {
+    background-color: #192A56;
+  }
+
+  &--9 {
+    background-color: #6A89CC;
+  }
+
+  &--10 {
+    background-color: #0A3D62;
+  }
+
+  &--11 {
+    background-color: #4BCFFA;
+  }
+
+  &--12 {
+    background-color: #0ABDE3;
+  }
+
+  &--13 {
+    background-color: #25CCF7;
+  }
+
+  &--14 {
+    background-color: #67E6CD;
+  }
+
+  &--15 {
+    background-color: #3C40C6;
+  }
+}
+
 .item:hover {
   transform: translateY(0px) scale(1.1);
   transition-duration: 0.3s;
   box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
-  z-index: 1;
+  // z-index: 1;
 }
