--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@ body {
 }
 
 body .text-scroll {
-  margin-top: 100px;
+  margin-top: 120px;
   padding: 15px 15px 2500px;
   font-size: 20px;
 }
@@ -17,6 +17,10 @@ body .text-scroll {
 .color-name {
   font-family: monospace, 'sans-serif';
   font-size: 30px;
-  margin-top: 50px;
+  text-align: center;
+}
+
+.spcmar {
+  margin-top: 100px;
 }
 /*# sourceMappingURL=style.css.map */
