--- a/css/style.scss
+++ b/css/style.scss
@@ -8,7 +8,7 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 
   .text-scroll {
-    margin-top: 100px;
+    margin-top: 120px;
     padding: 15px 15px 2500px;
     font-size: 20px;
   }
@@ -17,5 +17,9 @@ body {
 .color-name {
   font-family: monospace, 'sans-serif';
   font-size: 30px;
-  margin-top: 50px;
+  text-align: center;
+}
+
+.spcmar {
+  margin-top: 100px;
 }
