--- a/css/style.css
+++ b/css/style.css
@@ -6,11 +6,13 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  width: 100%;
 }
 
 body .text-scroll {
   margin-top: 120px;
-  padding: 15px 15px 2500px;
+  padding: 15px 15px;
   font-size: 20px;
 }
 
