--- a/css/style.scss
+++ b/css/style.scss
@@ -6,10 +6,12 @@
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
+  height: 100%;
+  width: 100%;
 
   .text-scroll {
     margin-top: 120px;
-    padding: 15px 15px 2500px;
+    padding: 15px 15px;
     font-size: 20px;
   }
 }
