--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,4 @@
 @import '../css/style.scss';
 @import '../css/navbar.scss';
 @import '../css/colorpalette.scss';
+@import '../css/sidescrollbar.scss';
