--- a/css/sidescrollbar.scss
+++ b/css/sidescrollbar.scss
@@ -1,12 +1,12 @@
 .progress-container {
   width: 100%;
-  height: 7px;
+  height: 6px;
   background: #ccc;
 }
 
 .progress-bar {
-  height: 7px;
-  background: #8966b8;
+  height: 6px;
+  background: #bc3285; //#d62c63
   width: 0%;
 }
 
