--- a/styles/main.css
+++ b/styles/main.css
@@ -5,6 +5,7 @@
 
 body {
   margin: 0;
+  background-color: #f3f3f7;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: 100%;
@@ -111,6 +112,7 @@ body .text-scroll {
 
 .item {
   padding: 2px;
+  cursor: pointer;
   text-align: center;
   vertical-align: middle;
   font-size: 15px;
