--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,7 @@
 
 body {
   margin: 0;
-  background-color: #f3f3f7;
+  background-color: #fff;
   font-family: Arial, Helvetica, sans-serif;
   height: 100%;
   width: 100%;
@@ -18,7 +18,7 @@ body .text-scroll {
 }
 
 .color-name {
-  font-family: monospace, 'sans-serif';
+  font-family: monospace, "sans-serif";
   font-size: 30px;
   text-align: center;
 }
