Added animation on the scroll

--- a/css/style.scss
+++ b/css/style.scss
@@ -23,6 +23,17 @@ body {
   text-align: center;
 }
 
+// hr {
+//   border: none;
+//   height: 20px;
+//   width: 20%;
+//   height: 50px;
+//   margin-top: 0;
+//   border-bottom: 1px solid #1f1209;
+//   box-shadow: 0 20px 20px -20px #333;
+//   margin: -65px auto 25px;
+// }
+
 .spcmar {
   margin-top: 100px;
 }
