--- a/css/colorpalette.css
+++ b/css/colorpalette.css
@@ -16,7 +16,7 @@
   cursor: pointer;
   text-align: center;
   vertical-align: middle;
-  font-size: 18px;
+  font-size: 16px;
   font-family: sans-serif;
   line-height: 175px;
   color: #fff;
@@ -332,5 +332,11 @@
           transition-duration: 0.3s;
   -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
           box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+@media screen and (max-width: 580px) {
+  .item {
+    font-size: 12px;
+  }
 }
 /*# sourceMappingURL=colorpalette.css.map */
