--- a/css/colorpalette.scss
+++ b/css/colorpalette.scss
@@ -13,7 +13,7 @@
   cursor: pointer;
   text-align: center;
   vertical-align: middle;
-  font-size: 18px;
+  font-size: 16px;
   font-family: sans-serif;
   line-height: 175px;
   color: #fff;
@@ -341,4 +341,10 @@
   transition-duration: 0.3s;
   box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
   // z-index: 1;
+}
+
+@media screen and (max-width: 580px) {
+  .item {
+    font-size: 12px;
+  }
 }
