managed logo size

--- a/css/navbar.css
+++ b/css/navbar.css
@@ -1,6 +1,6 @@
 #navbar {
   overflow: hidden;
-  background-color: #F3F3F7;
+  background-color: #fff;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   -webkit-transition: 0.4s;
