--- a/styles/main.css
+++ b/styles/main.css
@@ -57,7 +57,7 @@ body .text-scroll {
 
 #navbar {
   overflow: hidden;
-  background-color: #F3F3F7;
+  background-color: #fff;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   -webkit-transition: 0.4s;
