--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -1,6 +1,6 @@
 #navbar {
   overflow: hidden;
-  background-color: #fff;
+  background-color: #f3f3f7;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
   // padding: 20px 10px;
