--- a/styles/main.scss
+++ b/styles/main.scss
@@ -2,3 +2,4 @@
 @import '../css/navbar.scss';
 @import '../css/colorpalette.scss';
 @import '../css/sidescrollbar.scss';
+@import '../css/footer.scss';
