--- a/css/style.scss
+++ b/css/style.scss
@@ -18,9 +18,27 @@ body {
 }
 
 .color-name {
+  width: 16%;
   font-family: monospace, "sans-serif";
   font-size: 30px;
   text-align: center;
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+}
+
+.spcmar {
+  margin-top: 100px;
+}
+
+@media screen and (max-width: 580px) {
+
+  .color-name {
+    width: 35%;
+    font-size: 15px;
+  }
+
+  .spcmar {
+    margin-top: 50px;
+  }
 }
 
 // hr {
@@ -33,7 +51,3 @@ body {
 //   box-shadow: 0 20px 20px -20px #333;
 //   margin: -65px auto 25px;
 // }
-
-.spcmar {
-  margin-top: 100px;
-}
