--- a/styles/main.css
+++ b/styles/main.css
@@ -18,13 +18,26 @@ body .text-scroll {
 }
 
 .color-name {
+  width: 16%;
   font-family: monospace, "sans-serif";
   font-size: 30px;
   text-align: center;
+  -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
 }
 
 .spcmar {
   margin-top: 100px;
+}
+
+@media screen and (max-width: 580px) {
+  .color-name {
+    width: 35%;
+    font-size: 15px;
+  }
+  .spcmar {
+    margin-top: 50px;
+  }
 }
 
 #navbar {
