--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ body {
 
 body .text-scroll {
   margin-top: 120px;
-  padding: 15px 15px;
+  padding: 0 15px;
   font-size: 20px;
 }
 
@@ -32,7 +32,7 @@ body .text-scroll {
 
 @media screen and (max-width: 580px) {
   .color-name {
-    width: 35%;
+    width: 40%;
     font-size: 15px;
   }
   .spcmar {
