maintain colorpalette.scss file

--- a/css/colorpalette.scss
+++ b/css/colorpalette.scss
@@ -343,8 +343,30 @@
   // z-index: 1;
 }
 
+.color-name {
+  width: 16%;
+  font-family: monospace, "sans-serif";
+  font-size: 30px;
+  text-align: center;
+  box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+}
+
+.spcmar {
+  margin-top: 100px;
+}
+
 @media screen and (max-width: 580px) {
+
   .item {
     font-size: 12px;
+  }
+
+  .color-name {
+    width: 40%;
+    font-size: 15px;
+  }
+
+  .spcmar {
+    margin-top: 50px;
   }
 }
