--- a/css/colorpalette.css
+++ b/css/colorpalette.css
@@ -334,9 +334,29 @@
           box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
+.color-name {
+  width: 16%;
+  font-family: monospace, "sans-serif";
+  font-size: 30px;
+  text-align: center;
+  -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+}
+
+.spcmar {
+  margin-top: 100px;
+}
+
 @media screen and (max-width: 580px) {
   .item {
     font-size: 12px;
+  }
+  .color-name {
+    width: 40%;
+    font-size: 15px;
+  }
+  .spcmar {
+    margin-top: 50px;
   }
 }
 /*# sourceMappingURL=colorpalette.css.map */
