--- a/css/footer.css
+++ b/css/footer.css
@@ -25,4 +25,16 @@
 #green {
   color: #06cf4a;
 }
+
+@media screen and (max-width: 580px) {
+  .footer__text > * {
+    font-size: 0.5rem;
+  }
+  .footer__text {
+    margin-top: 2rem;
+  }
+  .fa-heart-o {
+    font-size: 16px;
+  }
+}
 /*# sourceMappingURL=footer.css.map */
