--- a/css/footer.scss
+++ b/css/footer.scss
@@ -25,3 +25,18 @@
 #green {
   color: #06cf4a;
 }
+
+@media screen and (max-width: 580px) {
+
+  .footer__text>* {
+    font-size: 0.5rem;
+  }
+
+  .footer__text {
+    margin-top: 2rem;
+  }
+
+  .fa-heart-o {
+    font-size: 16px;
+  }
+}
