--- a/styles/main.css
+++ b/styles/main.css
@@ -17,29 +17,6 @@ body .text-scroll {
   font-size: 20px;
 }
 
-.color-name {
-  width: 16%;
-  font-family: monospace, "sans-serif";
-  font-size: 30px;
-  text-align: center;
-  -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
-          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
-}
-
-.spcmar {
-  margin-top: 100px;
-}
-
-@media screen and (max-width: 580px) {
-  .color-name {
-    width: 40%;
-    font-size: 15px;
-  }
-  .spcmar {
-    margin-top: 50px;
-  }
-}
-
 #navbar {
   overflow: hidden;
   background-color: #f3f3f7;
@@ -449,9 +426,29 @@ body .text-scroll {
           box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
 
+.color-name {
+  width: 16%;
+  font-family: monospace, "sans-serif";
+  font-size: 30px;
+  text-align: center;
+  -webkit-box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+          box-shadow: 5px 5px 25px rgba(0, 0, 0, 0.2);
+}
+
+.spcmar {
+  margin-top: 100px;
+}
+
 @media screen and (max-width: 580px) {
   .item {
     font-size: 12px;
+  }
+  .color-name {
+    width: 40%;
+    font-size: 15px;
+  }
+  .spcmar {
+    margin-top: 50px;
   }
 }
 
@@ -497,5 +494,17 @@ body .text-scroll {
 
 #green {
   color: #06cf4a;
+}
+
+@media screen and (max-width: 580px) {
+  .footer__text > * {
+    font-size: 0.5rem;
+  }
+  .footer__text {
+    margin-top: 2rem;
+  }
+  .fa-heart-o {
+    font-size: 16px;
+  }
 }
 /*# sourceMappingURL=main.css.map */
