Added media query

--- a/css/colorpalette.css
+++ b/css/colorpalette.css
@@ -1,6 +1,6 @@
 .cointainer {
   width: 100%;
-  background-color: #FFF;
+  background-color: #fff;
   display: -ms-grid;
   display: grid;
   margin: 5px 0.5px;
@@ -26,163 +26,163 @@
 }
 
 .itemr--1 {
-  background-color: #E44236;
+  background-color: #e44236;
 }
 
 .itemr--2 {
-  background-color: #B83227;
+  background-color: #b83227;
 }
 
 .itemr--3 {
-  background-color: #D63031;
+  background-color: #d63031;
 }
 
 .itemr--4 {
-  background-color: #E84342;
+  background-color: #e84342;
 }
 
 .itemr--5 {
-  background-color: #FF3031;
+  background-color: #ff3031;
 }
 
 .itemr--6 {
-  background-color: #BA2F16;
+  background-color: #ba2f16;
 }
 
 .itemr--7 {
-  background-color: #EC4849;
+  background-color: #ec4849;
 }
 
 .itemr--8 {
-  background-color: #FF3E4D;
+  background-color: #ff3e4d;
 }
 
 .itemr--9 {
-  background-color: #E71C23;
+  background-color: #e71c23;
 }
 
 .itemr--10 {
-  background-color: #EA425C;
+  background-color: #ea425c;
 }
 
 .itemr--11 {
-  background-color: #E8290B;
+  background-color: #e8290b;
 }
 
 .itemr--12 {
-  background-color: #AE1438;
+  background-color: #ae1438;
 }
 
 .itemr--13 {
-  background-color: #E83350;
+  background-color: #e83350;
 }
 
 .itemr--14 {
-  background-color: #FF4848;
+  background-color: #ff4848;
 }
 
 .itemr--15 {
-  background-color: #FF362E;
+  background-color: #ff362e;
 }
 
 .itemb--1 {
-  background-color: #3498DB;
+  background-color: #3498db;
 }
 
 .itemb--2 {
-  background-color: #2475B0;
+  background-color: #2475b0;
 }
 
 .itemb--3 {
-  background-color: #74B9FF;
+  background-color: #74b9ff;
 }
 
 .itemb--4 {
-  background-color: #0A79DF;
+  background-color: #0a79df;
 }
 
 .itemb--5 {
-  background-color: #4834DF;
+  background-color: #4834df;
 }
 
 .itemb--6 {
-  background-color: #30336B;
+  background-color: #30336b;
 }
 
 .itemb--7 {
-  background-color: #487EB0;
+  background-color: #487eb0;
 }
 
 .itemb--8 {
-  background-color: #192A56;
+  background-color: #192a56;
 }
 
 .itemb--9 {
-  background-color: #6A89CC;
+  background-color: #6a89cc;
 }
 
 .itemb--10 {
-  background-color: #0A3D62;
+  background-color: #0a3d62;
 }
 
 .itemb--11 {
-  background-color: #4BCFFA;
+  background-color: #4bcffa;
 }
 
 .itemb--12 {
-  background-color: #0ABDE3;
+  background-color: #0abde3;
 }
 
 .itemb--13 {
-  background-color: #25CCF7;
+  background-color: #25ccf7;
 }
 
 .itemb--14 {
-  background-color: #67E6CD;
+  background-color: #67e6cd;
 }
 
 .itemb--15 {
-  background-color: #3C40C6;
+  background-color: #3c40c6;
 }
 
 .itemg--1 {
-  background-color: #2ECC72;
+  background-color: #2ecc72;
 }
 
 .itemg--2 {
-  background-color: #26AE60;
+  background-color: #26ae60;
 }
 
 .itemg--3 {
-  background-color: #6AB04C;
+  background-color: #6ab04c;
 }
 
 .itemg--4 {
-  background-color: #6AB04A;
+  background-color: #6ab04a;
 }
 
 .itemg--5 {
-  background-color: #BADC57;
+  background-color: #badc57;
 }
 
 .itemg--6 {
-  background-color: #43BE31;
+  background-color: #43be31;
 }
 
 .itemg--7 {
-  background-color: #45CE30;
+  background-color: #45ce30;
 }
 
 .itemg--8 {
-  background-color: #10A881;
+  background-color: #10a881;
 }
 
 .itemg--9 {
-  background-color: #1BCA98;
+  background-color: #1bca98;
 }
 
 .itemg--10 {
-  background-color: #7CEC9F;
+  background-color: #7cec9f;
 }
 
 .itemg--11 {
@@ -190,103 +190,103 @@
 }
 
 .itemg--12 {
-  background-color: #A3CB37;
+  background-color: #a3cb37;
 }
 
 .itemg--13 {
-  background-color: #75DA8B;
+  background-color: #75da8b;
 }
 
 .itemg--14 {
-  background-color: #53E0BC;
+  background-color: #53e0bc;
 }
 
 .itemg--15 {
-  background-color: #218F76;
+  background-color: #218f76;
 }
 
 .itemy--1 {
-  background-color: #EEC213;
+  background-color: #eec213;
 }
 
 .itemy--2 {
-  background-color: #F5C469;
+  background-color: #f5c469;
 }
 
 .itemy--3 {
-  background-color: #F4C724;
+  background-color: #f4c724;
 }
 
 .itemy--4 {
-  background-color: #F0DD87;
+  background-color: #f0dd87;
 }
 
 .itemy--5 {
-  background-color: #DFAF2B;
+  background-color: #dfaf2b;
 }
 
 .itemy--6 {
-  background-color: #FAC42F;
+  background-color: #fac42f;
 }
 
 .itemy--7 {
-  background-color: #F3B63A;
+  background-color: #f3b63a;
 }
 
 .itemy--8 {
-  background-color: #FBD28B;
+  background-color: #fbd28b;
 }
 
 .itemy--9 {
-  background-color: #F3B431;
+  background-color: #f3b431;
 }
 
 .itemy--10 {
-  background-color: #FAD02E;
+  background-color: #fad02e;
 }
 
 .itemy--11 {
-  background-color: #E5B143;
+  background-color: #e5b143;
 }
 
 .itemy--12 {
-  background-color: #F3CC79;
+  background-color: #f3cc79;
 }
 
 .itemy--13 {
-  background-color: #F9DDA4;
+  background-color: #f9dda4;
 }
 
 .itemy--14 {
-  background-color: #FFF222;
+  background-color: #fff222;
 }
 
 .itemy--15 {
-  background-color: #E1DA00;
+  background-color: #e1da00;
 }
 
 .itemgr--1 {
-  background-color: #7B8788;
+  background-color: #7b8788;
 }
 
 .itemgr--2 {
-  background-color: #99AAAB;
+  background-color: #99aaab;
 }
 
 .itemgr--3 {
-  background-color: #2C3335;
+  background-color: #2c3335;
 }
 
 .itemgr--4 {
-  background-color: #616C6F;
+  background-color: #616c6f;
 }
 
 .itemgr--5 {
-  background-color: #DAE0E2;
+  background-color: #dae0e2;
 }
 
 .itemgr--6 {
-  background-color: #535C68;
+  background-color: #535c68;
 }
 
 .itemgr--7 {
@@ -294,7 +294,7 @@
 }
 
 .itemgr--8 {
-  background-color: #2F363F;
+  background-color: #2f363f;
 }
 
 .itemgr--9 {
@@ -302,27 +302,27 @@
 }
 
 .itemgr--10 {
-  background-color: #8395A7;
+  background-color: #8395a7;
 }
 
 .itemgr--11 {
-  background-color: #A4B0BD;
+  background-color: #a4b0bd;
 }
 
 .itemgr--12 {
-  background-color: #777E8B;
+  background-color: #777e8b;
 }
 
 .itemgr--13 {
-  background-color: #758AA2;
+  background-color: #758aa2;
 }
 
 .itemgr--14 {
-  background-color: #47535E;
+  background-color: #47535e;
 }
 
 .itemgr--15 {
-  background-color: #4C4B4B;
+  background-color: #4c4b4b;
 }
 
 .item:hover {
@@ -357,6 +357,16 @@
   }
   .spcmar {
     margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .color-name {
+    width: 20%;
+    font-size: 20px;
+  }
+  .spcmar {
+    margin-top: 70px;
   }
 }
 /*# sourceMappingURL=colorpalette.css.map */
