--- a/css/colorpalette.scss
+++ b/css/colorpalette.scss
@@ -1,6 +1,6 @@
 .cointainer {
   width: 100%;
-  background-color: #FFF;
+  background-color: #fff;
   display: grid;
   margin: 5px 0.5px;
   grid-template-rows: repeat(3, 175px);
@@ -22,171 +22,168 @@
 }
 
 .itemr {
-
   &--1 {
-    background-color: #E44236;
+    background-color: #e44236;
   }
 
   &--2 {
-    background-color: #B83227;
+    background-color: #b83227;
   }
 
   &--3 {
-    background-color: #D63031;
+    background-color: #d63031;
   }
 
   &--4 {
-    background-color: #E84342;
+    background-color: #e84342;
   }
 
   &--5 {
-    background-color: #FF3031;
+    background-color: #ff3031;
   }
 
   &--6 {
-    background-color: #BA2F16;
+    background-color: #ba2f16;
   }
 
   &--7 {
-    background-color: #EC4849;
+    background-color: #ec4849;
   }
 
   &--8 {
-    background-color: #FF3E4D;
+    background-color: #ff3e4d;
   }
 
   &--9 {
-    background-color: #E71C23;
+    background-color: #e71c23;
   }
 
   &--10 {
-    background-color: #EA425C;
+    background-color: #ea425c;
   }
 
   &--11 {
-    background-color: #E8290B;
+    background-color: #e8290b;
   }
 
   &--12 {
-    background-color: #AE1438;
+    background-color: #ae1438;
   }
 
   &--13 {
-    background-color: #E83350;
+    background-color: #e83350;
   }
 
   &--14 {
-    background-color: #FF4848;
+    background-color: #ff4848;
   }
 
   &--15 {
-    background-color: #FF362E;
+    background-color: #ff362e;
   }
 }
 
 .itemb {
-
   &--1 {
-    background-color: #3498DB;
+    background-color: #3498db;
   }
 
   &--2 {
-    background-color: #2475B0;
+    background-color: #2475b0;
   }
 
   &--3 {
-    background-color: #74B9FF;
+    background-color: #74b9ff;
   }
 
   &--4 {
-    background-color: #0A79DF;
+    background-color: #0a79df;
   }
 
   &--5 {
-    background-color: #4834DF;
+    background-color: #4834df;
   }
 
   &--6 {
-    background-color: #30336B;
+    background-color: #30336b;
   }
 
   &--7 {
-    background-color: #487EB0;
+    background-color: #487eb0;
   }
 
   &--8 {
-    background-color: #192A56;
+    background-color: #192a56;
   }
 
   &--9 {
-    background-color: #6A89CC;
+    background-color: #6a89cc;
   }
 
   &--10 {
-    background-color: #0A3D62;
+    background-color: #0a3d62;
   }
 
   &--11 {
-    background-color: #4BCFFA;
+    background-color: #4bcffa;
   }
 
   &--12 {
-    background-color: #0ABDE3;
+    background-color: #0abde3;
   }
 
   &--13 {
-    background-color: #25CCF7;
+    background-color: #25ccf7;
   }
 
   &--14 {
-    background-color: #67E6CD;
+    background-color: #67e6cd;
   }
 
   &--15 {
-    background-color: #3C40C6;
+    background-color: #3c40c6;
   }
 }
 
 .itemg {
-
   &--1 {
-    background-color: #2ECC72;
+    background-color: #2ecc72;
   }
 
   &--2 {
-    background-color: #26AE60;
+    background-color: #26ae60;
   }
 
   &--3 {
-    background-color: #6AB04C;
+    background-color: #6ab04c;
   }
 
   &--4 {
-    background-color: #6AB04A;
+    background-color: #6ab04a;
   }
 
   &--5 {
-    background-color: #BADC57;
+    background-color: #badc57;
   }
 
   &--6 {
-    background-color: #43BE31;
+    background-color: #43be31;
   }
 
   &--7 {
-    background-color: #45CE30;
+    background-color: #45ce30;
   }
 
   &--8 {
-    background-color: #10A881;
+    background-color: #10a881;
   }
 
   &--9 {
-    background-color: #1BCA98;
+    background-color: #1bca98;
   }
 
   &--10 {
-    background-color: #7CEC9F;
+    background-color: #7cec9f;
   }
 
   &--11 {
@@ -194,109 +191,107 @@
   }
 
   &--12 {
-    background-color: #A3CB37;
+    background-color: #a3cb37;
   }
 
   &--13 {
-    background-color: #75DA8B;
+    background-color: #75da8b;
   }
 
   &--14 {
-    background-color: #53E0BC;
+    background-color: #53e0bc;
   }
 
   &--15 {
-    background-color: #218F76;
+    background-color: #218f76;
   }
 }
 
 .itemy {
-
   &--1 {
-    background-color: #EEC213;
+    background-color: #eec213;
   }
 
   &--2 {
-    background-color: #F5C469;
+    background-color: #f5c469;
   }
 
   &--3 {
-    background-color: #F4C724;
+    background-color: #f4c724;
   }
 
   &--4 {
-    background-color: #F0DD87;
+    background-color: #f0dd87;
   }
 
   &--5 {
-    background-color: #DFAF2B;
+    background-color: #dfaf2b;
   }
 
   &--6 {
-    background-color: #FAC42F;
+    background-color: #fac42f;
   }
 
   &--7 {
-    background-color: #F3B63A;
+    background-color: #f3b63a;
   }
 
   &--8 {
-    background-color: #FBD28B;
+    background-color: #fbd28b;
   }
 
   &--9 {
-    background-color: #F3B431;
+    background-color: #f3b431;
   }
 
   &--10 {
-    background-color: #FAD02E;
+    background-color: #fad02e;
   }
 
   &--11 {
-    background-color: #E5B143;
+    background-color: #e5b143;
   }
 
   &--12 {
-    background-color: #F3CC79;
+    background-color: #f3cc79;
   }
 
   &--13 {
-    background-color: #F9DDA4;
+    background-color: #f9dda4;
   }
 
   &--14 {
-    background-color: #FFF222;
+    background-color: #fff222;
   }
 
   &--15 {
-    background-color: #E1DA00;
+    background-color: #e1da00;
   }
 }
 
 .itemgr {
-
   &--1 {
-    background-color: #7B8788;
+    background-color: #7b8788;
   }
 
   &--2 {
-    background-color: #99AAAB;
+    background-color: #99aaab;
   }
 
   &--3 {
-    background-color: #2C3335;
+    background-color: #2c3335;
   }
 
   &--4 {
-    background-color: #616C6F;
+    background-color: #616c6f;
   }
 
   &--5 {
-    background-color: #DAE0E2;
+    background-color: #dae0e2;
   }
 
   &--6 {
-    background-color: #535C68;
+    background-color: #535c68;
   }
 
   &--7 {
@@ -304,7 +299,7 @@
   }
 
   &--8 {
-    background-color: #2F363F;
+    background-color: #2f363f;
   }
 
   &--9 {
@@ -312,27 +307,27 @@
   }
 
   &--10 {
-    background-color: #8395A7;
+    background-color: #8395a7;
   }
 
   &--11 {
-    background-color: #A4B0BD;
+    background-color: #a4b0bd;
   }
 
   &--12 {
-    background-color: #777E8B;
+    background-color: #777e8b;
   }
 
   &--13 {
-    background-color: #758AA2;
+    background-color: #758aa2;
   }
 
   &--14 {
-    background-color: #47535E;
+    background-color: #47535e;
   }
 
   &--15 {
-    background-color: #4C4B4B;
+    background-color: #4c4b4b;
   }
 }
 
@@ -344,6 +339,7 @@
 }
 
 .color-name {
+  // position: relative;
   width: 16%;
   font-family: monospace, "sans-serif";
   font-size: 30px;
@@ -356,7 +352,6 @@
 }
 
 @media screen and (max-width: 580px) {
-
   .item {
     font-size: 12px;
   }
@@ -368,5 +363,16 @@
 
   .spcmar {
     margin-top: 50px;
+  }
+}
+
+@media screen and (max-width: 992px) {
+  .color-name {
+    width: 20%;
+    font-size: 20px;
+  }
+
+  .spcmar {
+    margin-top: 70px;
   }
 }
