--- a/css/navbar.css
+++ b/css/navbar.css
@@ -13,9 +13,10 @@
 
 #navbar a {
   float: left;
+  display: block;
   color: #000;
   text-align: center;
-  padding: 12px;
+  padding: 10px;
   text-decoration: none;
   font-size: 18px;
   line-height: 15px;
@@ -56,9 +57,6 @@
 }
 
 @media screen and (max-width: 580px) {
-  #navbar {
-    padding: 20px 10px !important;
-  }
   #navbar a {
     float: none;
     display: block;
