--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -13,9 +13,10 @@
 
   a {
     float: left;
+    display: block;
     color: #000;
     text-align: center;
-    padding: 12px;
+    padding: 10px;
     text-decoration: none;
     font-size: 18px;
     line-height: 15px;
@@ -59,7 +60,7 @@
 
 @media screen and (max-width: 580px) {
   #navbar {
-    padding: 20px 10px !important;
+    // padding: 20px 10px !important;
 
     a {
       float: none;
