--- a/styles/main.css
+++ b/styles/main.css
@@ -32,9 +32,10 @@ body .text-scroll {
 
 #navbar a {
   float: left;
+  display: block;
   color: #000;
   text-align: center;
-  padding: 12px;
+  padding: 10px;
   text-decoration: none;
   font-size: 18px;
   line-height: 15px;
@@ -75,9 +76,6 @@ body .text-scroll {
 }
 
 @media screen and (max-width: 580px) {
-  #navbar {
-    padding: 20px 10px !important;
-  }
   #navbar a {
     float: none;
     display: block;
