--- a/styles/main.css
+++ b/styles/main.css
@@ -17,6 +17,12 @@ body .text-scroll {
   font-size: 20px;
 }
 
+@media screen and (max-width: 580px) {
+  body .text-scroll {
+    margin-top: 75px;
+  }
+}
+
 #navbar {
   overflow: hidden;
   background-color: #f3f3f7;
