--- a/styles/main.css
+++ b/styles/main.css
@@ -425,8 +425,8 @@ body .text-scroll {
 .item:hover {
   -webkit-transform: translateY(0px) scale(0.9);
           transform: translateY(0px) scale(0.9);
-  -webkit-transition-duration: 0.3s;
-          transition-duration: 0.3s;
+  -webkit-transition: all 0.3s ease-in-out;
+  transition: all 0.3s ease-in-out;
   -webkit-box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
           box-shadow: 0 5px 5px 5px rgba(0, 0, 0, 0.3);
 }
