--- a/css/navbar.scss
+++ b/css/navbar.scss
@@ -87,6 +87,21 @@
   }
 }
 
+// .btn .btn-success {
+//   position: relative;
+//   top: 0;
+//   right: 0;
+//   height: 3rem;
+//   min-width: 3rem;
+//   width: 3rem;
+//   z-index: 5;
+//   // border-radius: 4px;
+//   padding: 0;
+//   background: #0e0616;
+//   box-shadow: 2px 2px 10px 0 rgba(255, 255, 255, 0.2);
+//   color: #fff;
+// }
+
 // .btn.btn-icon.btn-lg,
 // .navbar .navbar-nav > a.btn.btn-icon.btn-lg {
 //   height: 3rem;
