--- a/css/footer.css
+++ b/css/footer.css
@@ -13,7 +13,7 @@
 
 .footer__text {
   margin-top: 5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Google Sans', sans-serif;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
 }
