--- a/css/footer.scss
+++ b/css/footer.scss
@@ -13,7 +13,7 @@
 
 .footer__text {
   margin-top: 5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Google Sans', sans-serif;
   // background-color: #F3F3F7;
   box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
 }
