--- a/styles/main.css
+++ b/styles/main.css
@@ -95,20 +95,6 @@ body .text-scroll {
     width: 180px;
   }
 }
-
-.btn .btn-success {
-  position: relative;
-  top: 0;
-  right: 0;
-  height: 3rem;
-  min-width: 3rem;
-  width: 3rem;
-  padding: 0;
-  background-color: #0e0616;
-  -webkit-box-shadow: 2px 2px 10px 0 rgba(255, 255, 255, 0.2);
-          box-shadow: 2px 2px 10px 0 rgba(255, 255, 255, 0.2);
-  color: #fff;
-}
 .cointainer {
   width: 100%;
   background-color: #fff;
@@ -535,7 +521,7 @@ body .text-scroll {
 
 .footer__text {
   margin-top: 5rem;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Google Sans', sans-serif;
   -webkit-box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.5);
 }
